[package]
name = "cress"
version = "0.1.0"
authors = ["Jackson Riley <jackson.riley@btinternet.com>"]
edition = "2018"
default-run = "cress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.7.0", features=["svg"]}
clap = "2.33"